--- a/week_11/week_11.ipynb
+++ b/week_11/week_11.ipynb
@@ -629,7 +629,7 @@
     "즉, **결과변수를 어떻게 변환**시켜주느냐에 따라서 **logit link**와 **identity link**가 있다.\n",
     "\n",
     "\n",
-    "$E(T)={ \\beta  }_{ 0 }+{ \\beta  }_{ 1 }Y\\\\ T={ \\beta  }_{ 0 }+{ \\beta  }_{ 1 }Y+\\epsilon \\\\ \\epsilon \\quad \\~ \\quad N(0,\\quad { \\sigma  }^{ 2 })$$\n",
+    "$$E(T)={ \\beta  }_{ 0 }+{ \\beta  }_{ 1 }Y\\\\ T={ \\beta  }_{ 0 }+{ \\beta  }_{ 1 }Y+\\epsilon \\\\ \\epsilon \\quad \\~ \\quad N(0,\\quad { \\sigma  }^{ 2 })$$\n",
     "  \n",
     "가정을 하면서 최소제곱법이 아니라 최대우도법으로 beta0과 beta1을 추정할 수 있다.(확률을 가지고 liklihood를 maximize한다는 점에서 최소제곱법과 다르다.)\n",
     "결론적으로 최소제곱법으로 구한 beta0와 beta1의 계수와 최대우도법으로 구한 계수는 같다, 그러나 sigma에 대한 추정이 다르다.\n",
