--- a/week_7/week_7.ipynb
+++ b/week_7/week_7.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -290,8 +290,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
+   "execution_count": 7,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "ename": "ERROR",
@@ -311,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -499,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -590,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -635,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -686,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -714,7 +716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -762,7 +764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -855,7 +857,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -874,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -924,7 +926,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -970,7 +972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -998,7 +1000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1035,7 +1037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1080,7 +1082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1112,7 +1114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1144,6 +1146,40 @@
    "metadata": {},
    "source": [
     "F 검정과 같은 ```p``` 값을 가진다."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "      year           cdr             tfr             marn       \n",
+       " Min.   :1970   Min.   :5.000   Min.   :0.977   Min.   :239457  \n",
+       " 1st Qu.:1982   1st Qu.:5.200   1st Qu.:1.226   1st Qu.:303156  \n",
+       " Median :1994   Median :5.500   Median :1.560   Median :330634  \n",
+       " Mean   :1994   Mean   :5.814   Mean   :1.922   Mean   :341759  \n",
+       " 3rd Qu.:2006   3rd Qu.:6.200   3rd Qu.:2.390   3rd Qu.:390276  \n",
+       " Max.   :2018   Max.   :8.000   Max.   :4.540   Max.   :434911  \n",
+       "                                                                \n",
+       "      le0           year_c2           cdr_c2      \n",
+       " Min.   :62.30   Min.   :0.0000   Min.   :0.0000  \n",
+       " 1st Qu.:67.08   1st Qu.:0.0000   1st Qu.:0.0000  \n",
+       " Median :73.30   Median :0.0000   Median :1.0000  \n",
+       " Mean   :72.82   Mean   :0.3673   Mean   :0.5714  \n",
+       " 3rd Qu.:78.35   3rd Qu.:1.0000   3rd Qu.:1.0000  \n",
+       " Max.   :82.70   Max.   :1.0000   Max.   :1.0000  \n",
+       " NA's   :1                                        "
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "summary(ndemog)"
    ]
   }
  ],
