--- a/week_7/week_7.ipynb
+++ b/week_7/week_7.ipynb
@@ -675,8 +675,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```tapply```는 ```양적 종속 변수```, ```범주형 설명 변수```, ```사용하고자 하는 함수``` 순으로 작성한다.         \n",
-    "위 사례에서, ```tapply```는 ```mean``` 함수를 ```year```에 따라 ```tfr```에 적용한 것이다."
+    "```tapply```는 ```벡터```, ```색인```, ```사용하고자 하는 함수``` 순으로 작성한다.         \n",
+    "위 사례에서, ```tapply```는 ```tfr``` 벡터의 ```year```에 따라 ```mean```을 적용한 것이다."
    ]
   },
   {
@@ -759,7 +759,7 @@
    "metadata": {},
    "source": [
     "```cor```는 ```양적 설명 변수```, ```양적 종속 변수``` 순으로 작성한다.     \n",
-    "상관계수는 -1과 1 사이의 값을 가지며, 절댓값이 클수록 두 변수 사이의 **선형 관계**가 뚜렷하다는 것을 의미한다. 따라서 두 양적 변수에 관한 통계에 관해서는 **산점도**를 그리는 습관을 들여야 한다."
+    "상관계수는 -1과 1 사이의 값을 가지며, 절댓값이 1에 가까울 수록 두 변수 사이의 **선형 관계**가 뚜렷하다는 것을 의미한다. 따라서 두 양적 변수에 관한 통계에 관해서는 **산점도**를 그리는 습관을 들여야 한다."
    ]
   },
   {
@@ -818,8 +818,8 @@
    "metadata": {},
    "source": [
     "여러 변수의 상관계수를 보기 위해서는 ```cbind``` 명령어를 함께 사용한다.         \n",
-    "```use = \"complete.obs\"``` :  마지막 결측값을 제거하고 상관관계를 구한다. (여기서는 ```le0```의 마지막 변수)           \n",
-    "```use = \"pairwise.complete.obs\"``` : 결측값이 있는 변수와 상관관계를 구할 때는 결측값을 제거하고 상관관계를 구하되, 그 외 변수끼리 상관관계를 구할 때에는 모든 사례를 사용한다."
+    "- ```use = \"complete.obs\"``` :  결측값을 제거하고 상관관계를 구한다. (여기서는 ```le0```의 마지막 변수)           \n",
+    "- ```use = \"pairwise.complete.obs\"``` : 결측값이 있는 변수와 상관관계를 구할 때는 결측값을 제거하고 상관관계를 구하되, 그 외 변수끼리 상관관계를 구할 때에는 모든 사례를 사용한다."
    ]
   },
   {
@@ -844,8 +844,8 @@
    "metadata": {},
    "source": [
     "### ◽ 카이제곱 검정\n",
-    "집단간 비율을 비교하는 검정 방법으로, **영가설**은 설명 변수나 종속 변수의 범주 수에 제한 없이 두 변수가 **독립**.        \n",
-    "Z 검정은 설명 변수와 종속 변수의 범주가 모두 두 개인 경우의 카이제곱 검정이므로, *Z검정은 카이제곱 검정의 특수한 경우*라고 할 수 있다. R에서는 ```prop.test``` 명령어를 활용하여 두 집단 간 비율 비교를 수행할 수 있다. "
+    "<u>집단간 비율을 비교</u>하는 검정 방법으로, **영가설**은 설명 변수나 종속 변수의 범주 수에 제한 없이 두 변수가 **독립**.        \n",
+    "Z 검정은 설명 변수와 종속 변수의 범주가 모두 두 개인 경우의 카이제곱 검정이므로, <u>Z검정은 카이제곱 검정의 특수한 경우</u>라고 할 수 있다. R에서는 ```prop.test``` 명령어를 활용하여 두 집단 간 비율 비교를 수행할 수 있다. "
    ]
   },
   {
@@ -914,7 +914,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "```ifelse```문의 용례는 위와 같은데, ```특정 조건```, ```조건 충족 시 줄 값```, ```조건 미충족 시 줄 값``` 순으로 작성한다. 따라서 이렇게 만들어진 ```year_c2```와 ```cdr_c2```는 모두 0 또는 1의 값만 갖는 이항 변수이다."
+    "```ifelse```문의 용례는 위와 같은데, ```특정 조건```, ```조건 충족 시 줄 값```, ```조건 미충족 시 줄 값``` 순으로 작성한다.    \n",
+    "따라서 이렇게 만들어진 ```year_c2```와 ```cdr_c2```는 모두 0 또는 1의 값만 갖는 이항 변수이다."
    ]
   },
   {
@@ -967,35 +968,8 @@
    "metadata": {},
    "source": [
     "#### ◽ 카이제곱 검정 이용\n",
-    "그러나, ```prop.test``` 명령어는 단지 **두 집단 간 비율 비교**만 가능하다는 단점이 있다. 일반적인 분할표의 카이제곱 검정을 위해  ```chisq.test```를 사용한다."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "ERROR",
-     "evalue": "Error in table(year_c, cdr_c): 객체 'year_c'를 찾을 수 없습니다\n",
-     "output_type": "error",
-     "traceback": [
-      "Error in table(year_c, cdr_c): 객체 'year_c'를 찾을 수 없습니다\nTraceback:\n",
-      "1. chisq.test(table(year_c, cdr_c), correct = FALSE)",
-      "2. is.data.frame(x)",
-      "3. table(year_c, cdr_c)"
-     ]
-    }
-   ],
-   "source": [
-    "chisq.test(table(year_c, cdr_c), correct = FALSE)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "카이제곱 검정을 할 때에는 모든 분할표 칸의 기대 빈도가 5 이상이어야 한다. 그렇지 않을 때, R은 경고 문구를 표시한다."
+    "그러나, ```prop.test``` 명령어는 단지 **두 집단 간 비율 비교**만 가능하다는 단점이 있다. 일반적인 분할표의 카이제곱 검정을 위해  ```chisq.test```를 사용한다.   \n",
+    "카이제곱 검정을 할 때에는 <u>모든 분할표 칸의 기대 빈도가 5 이상이어야 한다</u>. 그렇지 않을 때, R은 경고 문구를 표시한다."
    ]
   },
   {
@@ -1077,7 +1051,7 @@
    "metadata": {},
    "source": [
     "### ◽ F 검정\n",
-    "F 검정은 ANOVA(analysis of variance)라고도 하며, **모든 집단의 평균이 같다**는 **영가설**을 검정하며,, 설명 변수가 셋 이상의 범주로 이루어져 있을 때에도 사용할 수 있다. 따라서 **두 집단 간 평균을 비교**하는 t 검정보다 *일반화된 검정*이다."
+    "F 검정은 ANOVA(analysis of variance)라고도 하며, <u>모든 집단의 평균이 같다</u>는 **영가설**을 검정하며, 설명 변수가 셋 이상의 범주로 이루어져 있을 때에도 사용할 수 있다. 따라서 **두 집단 간 평균을 비교**하는 <u>t 검정보다 일반화된 검정</u>이다."
    ]
   },
   {
@@ -1146,40 +1120,6 @@
    "metadata": {},
    "source": [
     "F 검정과 같은 ```p``` 값을 가진다."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "      year           cdr             tfr             marn       \n",
-       " Min.   :1970   Min.   :5.000   Min.   :0.977   Min.   :239457  \n",
-       " 1st Qu.:1982   1st Qu.:5.200   1st Qu.:1.226   1st Qu.:303156  \n",
-       " Median :1994   Median :5.500   Median :1.560   Median :330634  \n",
-       " Mean   :1994   Mean   :5.814   Mean   :1.922   Mean   :341759  \n",
-       " 3rd Qu.:2006   3rd Qu.:6.200   3rd Qu.:2.390   3rd Qu.:390276  \n",
-       " Max.   :2018   Max.   :8.000   Max.   :4.540   Max.   :434911  \n",
-       "                                                                \n",
-       "      le0           year_c2           cdr_c2      \n",
-       " Min.   :62.30   Min.   :0.0000   Min.   :0.0000  \n",
-       " 1st Qu.:67.08   1st Qu.:0.0000   1st Qu.:0.0000  \n",
-       " Median :73.30   Median :0.0000   Median :1.0000  \n",
-       " Mean   :72.82   Mean   :0.3673   Mean   :0.5714  \n",
-       " 3rd Qu.:78.35   3rd Qu.:1.0000   3rd Qu.:1.0000  \n",
-       " Max.   :82.70   Max.   :1.0000   Max.   :1.0000  \n",
-       " NA's   :1                                        "
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "summary(ndemog)"
    ]
   }
  ],
